[fix] 자바 버전에 맞게 코드 수정